--- a/notebooks/model_training/nowcasting/neural_network.ipynb
+++ b/notebooks/model_training/nowcasting/neural_network.ipynb
@@ -17,7 +17,8 @@
     "from scipy.stats import pearsonr\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -26,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/smooth_df.csv')\n",
+    "df = pd.read_csv('../../../data/smooth_df.csv')\n",
     "\n",
     "date_column = 'Date'\n",
     "date_number_column = 'Date Number'\n",
@@ -50,14 +51,14 @@
     "    splits = [(years[5], years[i]) for i in range(10, len(years) - 4)]\n",
     "    return splits\n",
     "\n",
-    "def get_train_test_split_data(X_shifted, y_shifted, X, y, train_start_date, test_start_date, test_end_date, corr_start_date):\n",
+    "def get_train_test_split_data(X, y, train_start_date, test_start_date, test_end_date, corr_start_date):\n",
     "    # Get the training and test data for a specific split\n",
-    "    train_indices = (X_shifted[date_column] >= train_start_date) & (X_shifted[date_column] < test_start_date)\n",
-    "    test_indices = (X_shifted[date_column] >= test_start_date) & (X_shifted[date_column] <= test_end_date)\n",
+    "    train_indices = (X[date_column] >= train_start_date) & (X[date_column] < test_start_date)\n",
+    "    test_indices = (X[date_column] >= test_start_date) & (X[date_column] <= test_end_date)\n",
     "    corr_indices = (X[date_column] >= corr_start_date) & (X[date_column] < test_start_date)\n",
     "\n",
-    "    X_train, y_train = X_shifted[train_indices], y_shifted[train_indices]\n",
-    "    X_test, y_test = X_shifted[test_indices], y_shifted[test_indices]\n",
+    "    X_train, y_train = X[train_indices], y[train_indices]\n",
+    "    X_test, y_test = X[test_indices], y[test_indices]\n",
     "    X_corr, y_corr = X[corr_indices], y[corr_indices]\n",
     "\n",
     "    return (X_train.iloc[:, 1:], y_train, X_test.iloc[:, 1:], y_test, X_corr.iloc[:, 1:], y_corr)\n",
@@ -129,7 +130,7 @@
    "source": [
     "class MFFNN(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(SimpleNN, self).__init__()\n",
+    "        super(MFFNN, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, 4)\n",
     "        self.fc2 = nn.Linear(4, 1)\n",
     "\n",
@@ -140,7 +141,7 @@
     "\n",
     "class DFFNN(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(SimpleNN, self).__init__()\n",
+    "        super(DFFNN, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, 25)\n",
     "        self.fc2 = nn.Linear(25, 25)\n",
     "        self.fc3 = nn.Linear(25, 1)\n",
@@ -164,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_neural_network(model, X_train, y_train, X_test, y_test, epochs=200, learning_rate=0.0001):\n",
+    "def train_neural_network(model, X_train, y_train, X_test, y_test, learning_rate, epochs=200):\n",
     "    criterion = nn.L1Loss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
@@ -229,13 +230,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_average_row(model_performance):\n",
+    "def add_average_row(df):\n",
     "    mae_avg = round(np.mean(df['MAE']), 5)\n",
     "    pearson_corr_avg = round(np.mean(df['Pearson_Correlation']), 5)\n",
     "    mape_avg = round(np.mean(df['MAPE']), 5)\n",
     "    print(\"MAE AVG: \", mae_avg, \"MAPE AVG: \", mape_avg, \"P AVG: \", pearson_corr_avg, \"\\n\\n\")\n",
     "\n",
-    "    model_performance.loc[len(model_performance)] = {\n",
+    "    df.loc[len(df)] = {\n",
     "        'Year': 'Average',\n",
     "        'MAE': mae_avg,\n",
     "        'MAPE': mape_avg,\n",
@@ -284,7 +285,7 @@
     "            else:\n",
     "                X_train, y_train, X_test, y_test = convert_to_tensor(X_train.values, y_train, X_test.values, y_test)\n",
     "\n",
-    "            model, epochs, train_losses, test_losses = train_neural_network(create_ffnn(X_train, seed, model_key), X_train, y_train, X_test, y_test)\n",
+    "            model, epochs, train_losses, test_losses = train_neural_network(create_ffnn(X_train, seed, model_key), X_train, y_train, X_test, y_test, 0.001 if model_key == 'MFFNN' else 0.0001)\n",
     "            seed_train_losses[(test_start_year, test_start_year+1)].append(train_losses)\n",
     "            seed_test_losses[(test_start_year, test_start_year+1)].append(test_losses)\n",
     "            y_pred, mae, mape, pearson_corr = evaluate_neural_network(model, X_test, y_test)\n",
@@ -335,7 +336,7 @@
    "outputs": [],
    "source": [
     "filtered_queries = pd.read_csv('../../sentence_embedding_feature_selection/results/average.csv').iloc[:1000]['Query'].to_list()\n",
-    "model_performance, model_predictions = train_elastic_net(filtered_queries, threshold=0.3, 'MFFNN')\n",
+    "model_performance, model_predictions = run_neural_network(filtered_queries, 0.3, 'MFFNN')\n",
     "print(model_performance)\n",
     "model_performance.to_csv(f'../../../model_results/nowcasting/neural_network/mffnn/nowcasting_performance.csv')\n",
     "model_predictions.to_csv(f'../../../model_results/nowcasting/neural_network/mffnn/nowcasting_predictions.csv')"
@@ -396,7 +397,7 @@
     "    \n",
     "    return pd.DataFrame(season_results)\n",
     "\n",
-    "model_predictions.to_csv(f'../../../model_results/nowcasting/neural_network/mffnn/nowcasting_predictions.csv')\n",
+    "model_predictions = pd.read_csv(f'../../../model_results/nowcasting/neural_network/mffnn/nowcasting_predictions.csv')\n",
     "model_predictions['Date'] = pd.to_datetime(model_predictions['Date'])\n",
     "\n",
     "period_performances = analyse_flu_seasons(model_predictions, 2014, 2019)\n",
