--- a/notebooks/model_training/forecasting/neural_network.ipynb
+++ b/notebooks/model_training/forecasting/neural_network.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.1+cu121\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "print(torch.__version__)\n",
@@ -17,7 +25,8 @@
     "from scipy.stats import pearsonr\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -26,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/smooth_df.csv')\n",
+    "df = pd.read_csv('../../../data/smooth_df.csv')\n",
     "\n",
     "date_column = 'Date'\n",
     "date_number_column = 'Date Number'\n",
@@ -129,7 +138,7 @@
    "source": [
     "class MFFNN(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(SimpleNN, self).__init__()\n",
+    "        super(MFFNN, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, 4)\n",
     "        self.fc2 = nn.Linear(4, 1)\n",
     "\n",
@@ -140,7 +149,7 @@
     "\n",
     "class DFFNN(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(SimpleNN, self).__init__()\n",
+    "        super(DFFNN, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, 25)\n",
     "        self.fc2 = nn.Linear(25, 25)\n",
     "        self.fc3 = nn.Linear(25, 1)\n",
@@ -164,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_neural_network(model, X_train, y_train, X_test, y_test, epochs=200, learning_rate=0.0001):\n",
+    "def train_neural_network(model, X_train, y_train, X_test, y_test, learning_rate, epochs=200):\n",
     "    criterion = nn.L1Loss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
@@ -229,13 +238,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_average_row(model_performance):\n",
+    "def add_average_row(df):\n",
     "    mae_avg = round(np.mean(df['MAE']), 5)\n",
     "    pearson_corr_avg = round(np.mean(df['Pearson_Correlation']), 5)\n",
     "    mape_avg = round(np.mean(df['MAPE']), 5)\n",
     "    print(\"MAE AVG: \", mae_avg, \"MAPE AVG: \", mape_avg, \"P AVG: \", pearson_corr_avg, \"\\n\\n\")\n",
     "\n",
-    "    model_performance.loc[len(model_performance)] = {\n",
+    "    df.loc[len(df)] = {\n",
     "        'Year': 'Average',\n",
     "        'MAE': mae_avg,\n",
     "        'MAPE': mape_avg,\n",
@@ -288,7 +297,7 @@
     "            else:\n",
     "                X_train, y_train, X_test, y_test = convert_to_tensor(X_train.values, y_train, X_test.values, y_test)\n",
     "\n",
-    "            model, epochs, train_losses, test_losses = train_neural_network(create_ffnn(X_train, seed, model_key), X_train, y_train, X_test, y_test)\n",
+    "            model, epochs, train_losses, test_losses = train_neural_network(create_ffnn(X_train, seed, model_key), X_train, y_train, X_test, y_test, 0.001 if model_key == 'MFFNN' else 0.0001)\n",
     "            seed_train_losses[(test_start_year, test_start_year+1)].append(train_losses)\n",
     "            seed_test_losses[(test_start_year, test_start_year+1)].append(test_losses)\n",
     "            y_pred, mae, mape, pearson_corr = evaluate_neural_network(model, X_test, y_test)\n",
@@ -340,7 +349,7 @@
    "source": [
     "filtered_queries = pd.read_csv('../../sentence_embedding_feature_selection/results/average.csv').iloc[:1000]['Query'].to_list()\n",
     "forecasting_horizon = 7\n",
-    "model_performance, model_predictions = train_elastic_net(filtered_queries, forecasting_horizon, threshold=0.3, 'MFFNN')\n",
+    "model_performance, model_predictions = run_neural_network(filtered_queries, forecasting_horizon, 0.3, 'MFFNN')\n",
     "print(model_performance)\n",
     "model_performance.to_csv(f'../../../model_results/forecasting/mffnn/forecasting_t+{forecasting_horizon}_performance.csv')\n",
     "model_predictions.to_csv(f'../../../model_results/forecasting/mffnn/forecasting_t+{forecasting_horizon}_predictions.csv')"
@@ -348,15 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
     "def define_periods(year):\n",
     "    periods = {\n",
     "        2014: [\n",
@@ -426,7 +430,7 @@
     "final_results = pd.concat(all_results)\n",
     "\n",
     "# Save results to a single CSV file\n",
-    "final_results.to_csv(f'../../../model_results/forecasting/mffnn/forecasting_t+{forecasting_horizon}_tail_performance.csv', index=False)"
+    "final_results.to_csv(f'../../../model_results/forecasting/mffnn/forecasting_period_performance.csv', index=False)"
    ]
   }
  ],
