--- a/notebooks/model_training/nowcasting/elastic_net.ipynb
+++ b/notebooks/model_training/nowcasting/elastic_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/smooth_df.csv')\n",
+    "df = pd.read_csv('../../../data/smooth_df.csv')\n",
     "\n",
     "date_column = 'Date'\n",
     "date_number_column = 'Date Number'\n",
@@ -280,8 +280,8 @@
     "            'L1_ratio': round(l1_ratio, 5),\n",
     "            'λ_1': round(λ_1, 5),\n",
     "            'λ_2': round(λ_2, 5),\n",
-    "            'Min number of weights from cv': min_non_zero_weights,\n",
-    "            'Max number of weights from cv': max_non_zero_weights,\n",
+    "            'Min number of weights from cv': round(min_non_zero_weights),\n",
+    "            'Max number of weights from cv': round(max_non_zero_weights),\n",
     "            'Number Of Non-Zero Weights': number_of_non_zero_weights\n",
     "        }\n",
     "\n",
@@ -306,11 +306,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_performance, model_predictions, top_queries_by_season = train_elastic_net(query_columns, val_window=-3, corr=True, threshold=0.5, check_min_weight=True)\n",
+    "model_performance, model_predictions = train_elastic_net(query_columns, val_window=-3, corr=True, threshold=0.5, check_min_weight=True)\n",
     "print(model_performance)\n",
     "model_performance.to_csv(f'../../../model_results/nowcasting/elastic_net/correlation/cv_with_min_150_features/nowcasting_performance.csv')\n",
-    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/correlation/cv_with_min_150_features/nowcasting_predictions.csv')\n",
-    "top_queries_by_season.to_csv(f'../../../model_results/nowcasting/elastic_net/correlation/cv_with_min_150_features/top_50_weighted_queries.csv')"
+    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/correlation/cv_with_min_150_features/nowcasting_predictions.csv')"
    ]
   },
   {
@@ -320,11 +319,10 @@
    "outputs": [],
    "source": [
     "filtered_queries = pd.read_csv('../../sentence_embedding_feature_selection/results/average.csv').iloc[:400]['Query'].to_list()\n",
-    "model_performance, model_predictions, top_queries_by_season = train_elastic_net(filtered_queries, val_window=-3, check_min_weight=True)\n",
+    "model_performance, model_predictions = train_elastic_net(filtered_queries, val_window=-3, check_min_weight=True)\n",
     "print(model_performance)\n",
     "model_performance.to_csv(f'../../../model_results/nowcasting/elastic_net/sentence_embedding/cv_with_min_150_features/nowcasting_performance.csv')\n",
-    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/sentence_embedding/cv_with_min_150_features/nowcasting_predictions.csv')\n",
-    "top_queries_by_season.to_csv(f'../../../model_results/nowcasting/elastic_net/sentence_embedding/cv_with_min_150_features/top_50_weighted_queries.csv')"
+    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/sentence_embedding/cv_with_min_150_features/nowcasting_predictions.csv')"
    ]
   },
   {
@@ -334,16 +332,15 @@
    "outputs": [],
    "source": [
     "filtered_queries = pd.read_csv('../../sentence_embedding_feature_selection/results/average.csv').iloc[:1000]['Query'].to_list()\n",
-    "model_performance, model_predictions, top_queries_by_season = train_elastic_net(filtered_queries, val_window=-3, corr=True, threshold=0.3, check_min_weight=True)\n",
+    "model_performance, model_predictions = train_elastic_net(filtered_queries, val_window=-3, corr=True, threshold=0.3, check_min_weight=True)\n",
     "print(model_performance)\n",
     "model_performance.to_csv(f'../../../model_results/nowcasting/elastic_net/hybrid/cv_with_min_150_features/nowcasting_performance.csv')\n",
-    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/hybrid/cv_with_min_150_features/nowcasting_predictions.csv')\n",
-    "top_queries_by_season.to_csv(f'../../../model_results/nowcasting/elastic_net/hybrid/cv_with_min_150_features/top_50_weighted_queries.csv')"
+    "model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/hybrid/cv_with_min_150_features/nowcasting_predictions.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +387,14 @@
     "            if not period_data.empty:\n",
     "                y_test = period_data['Actual_ILI_Rate']\n",
     "                y_pred = period_data['Predicted_ILI_Rate']\n",
-    "                mae = mean_absolute_error(y_test, y_pred)\n",
+    "                mae = round(mean_absolute_error(y_test, y_pred), 5)\n",
     "                period_name = f\"{start.strftime('%Y-%m-%d')} - {end.strftime('%Y-%m-%d')}\"\n",
     "                season_results.append({'Flu Season': f'{year}-{year+1}', 'Period': period_name, 'MAE': mae})\n",
     "    \n",
     "    return pd.DataFrame(season_results)\n",
     "\n",
-    "for feature_selection in ['correaltion', 'sentence_embedding', 'hybrid']:\n",
-    "    model_predictions.to_csv(f'../../../model_results/nowcasting/elastic_net/{feature_selection}/cv_with_min_150_features/nowcasting_predictions.csv')\n",
+    "for feature_selection in ['correlation', 'sentence_embedding', 'hybrid']:\n",
+    "    model_predictions = pd.read_csv(f'../../../model_results/nowcasting/elastic_net/{feature_selection}/cv_with_min_150_features/nowcasting_predictions.csv')\n",
     "    model_predictions['Date'] = pd.to_datetime(model_predictions['Date'])\n",
     "    \n",
     "    period_performances = analyse_flu_seasons(model_predictions, 2014, 2019)\n",
@@ -406,8 +403,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
