--- a/notebooks/model_training/generate_prediction_graphs.ipynb
+++ b/notebooks/model_training/generate_prediction_graphs.ipynb
@@ -58,7 +58,7 @@
     "colours = ['blue', 'red', 'green']\n",
     "\n",
     "# Create subplots for each forecasting horizon\n",
-    "fig, axs = plt.subplots(len(feature_selection), 1, figsize=(20, 9), sharex=True)\n",
+    "fig, axs = plt.subplots(len(feature_selection), 1, figsize=(20, 15), sharex=True)\n",
     "\n",
     "legend_handles = []  # List to store legend handles from all subplots\n",
     "legend_labels = []   # List to store legend labels from all subplots\n",
@@ -94,15 +94,32 @@
     "\n",
     "    # Formatting for the last subplot\n",
     "    if i == len(feature_selection) - 1:\n",
+    "        # Reset current_index\n",
+    "        current_index = 0\n",
+    "        \n",
     "        # Set x-axis tick locations and labels\n",
-    "        tick_indices = np.linspace(0, current_index, 20, dtype=int)\n",
-    "        tick_dates = [plot_dates[np.abs(np.array(range(len(plot_dates))) - tick).argmin()].strftime('%Y-%m') for tick in tick_indices]\n",
+    "        tick_indices = []\n",
+    "        tick_labels = []\n",
+    "        for j, (start_date, end_date) in enumerate(seasons):\n",
+    "            season_length = len(pd.date_range(start_date, end_date))\n",
+    "            # Add ticks for the start date of each flu season\n",
+    "            tick_indices.append(current_index+15)\n",
+    "            tick_indices.append(current_index + season_length * 1/3)\n",
+    "            tick_indices.append(current_index + season_length * 2/3)\n",
+    "            tick_indices.append(current_index + season_length-36)\n",
+    "            # Append corresponding labels for each tick index\n",
+    "            tick_labels.extend([pd.date_range(start_date, end_date)[15].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 1/3)].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 2/3)].strftime('%Y-%m'),\n",
+    "                                pd.date_range(start_date, end_date)[int(season_length-36)].strftime('%Y-%m')])\n",
+    "\n",
+    "            # Update current_index for the next season\n",
+    "            current_index += season_length + (50 if j < len(seasons) - 1 else 0)\n",
+    "\n",
     "        axs[i].set_xticks(tick_indices)\n",
-    "        axs[i].set_xticklabels(tick_dates, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
+    "        axs[i].set_xticklabels(tick_labels, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
     "        axs[i].set_xlabel('Date', fontsize=20, labelpad=20)  # Set common x-axis label with padding\n",
     "\n",
-    "    # axs[i].set_ylabel('ILI Rate')\n",
-    "    # axs[i].text(0.02, 0.95, labels[method], transform=axs[i].transAxes, fontsize=16, verticalalignment='top')\n",
     "    axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
     "\n",
     "    axs[i].spines['top'].set_visible(False)\n",
@@ -145,7 +162,6 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from matplotlib.ticker import MaxNLocator\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 3))\n",
     "\n",
@@ -175,10 +191,30 @@
     "\n",
     "    current_index += num_days + (50 if j < len(seasons) - 1 else 0)\n",
     "\n",
-    "tick_indices = np.linspace(0, current_index, 20, dtype=int)\n",
-    "tick_dates = [plot_dates[np.abs(np.array(range(len(plot_dates))) - tick).argmin()].strftime('%Y-%m') for tick in tick_indices]\n",
+    "# Reset current_index\n",
+    "current_index = 0\n",
+    "\n",
+    "# Set x-axis tick locations and labels\n",
+    "tick_indices = []\n",
+    "tick_labels = []\n",
+    "for j, (start_date, end_date) in enumerate(seasons):\n",
+    "    season_length = len(pd.date_range(start_date, end_date))\n",
+    "    # Add ticks for the start date of each flu season\n",
+    "    tick_indices.append(current_index+15)\n",
+    "    tick_indices.append(current_index + season_length * 1/3)\n",
+    "    tick_indices.append(current_index + season_length * 2/3)\n",
+    "    tick_indices.append(current_index + season_length-36)\n",
+    "    # Append corresponding labels for each tick index\n",
+    "    tick_labels.extend([pd.date_range(start_date, end_date)[15].strftime('%Y-%m'), \n",
+    "                        pd.date_range(start_date, end_date)[int(season_length * 1/3)].strftime('%Y-%m'), \n",
+    "                        pd.date_range(start_date, end_date)[int(season_length * 2/3)].strftime('%Y-%m'),\n",
+    "                        pd.date_range(start_date, end_date)[int(season_length-36)].strftime('%Y-%m')])\n",
+    "    \n",
+    "    # Update current_index for the next season\n",
+    "    current_index += season_length + (50 if j < len(seasons) - 1 else 0)\n",
+    "            \n",
     "ax.set_xticks(tick_indices)\n",
-    "ax.set_xticklabels(tick_dates, rotation=45, ha='right')\n",
+    "ax.set_xticklabels(tick_labels, rotation=45, ha='right')\n",
     "ax.set_xlabel('Date', fontsize=16, labelpad=10)\n",
     "ax.set_ylabel('ILI Rate', fontsize=16)\n",
     "ax.tick_params(axis='both', which='major', labelsize=14)\n",
@@ -187,7 +223,6 @@
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['bottom'].set_linewidth(0.5)\n",
     "ax.spines['left'].set_linewidth(0.5)\n",
-    "\n",
     "\n",
     "fig.legend(loc='upper center', bbox_to_anchor=(0.5, 1.01), ncol=4, handles=ax.get_legend_handles_labels()[0], fontsize=14)\n",
     "\n",
@@ -244,10 +279,30 @@
     "\n",
     "    current_index += num_days + (50 if j < len(seasons) - 1 else 0)\n",
     "\n",
-    "tick_indices = np.linspace(0, current_index, 20, dtype=int)\n",
-    "tick_dates = [plot_dates[np.abs(np.array(range(len(plot_dates))) - tick).argmin()].strftime('%Y-%m') for tick in tick_indices]\n",
+    "# Reset current_index\n",
+    "current_index = 0\n",
+    "\n",
+    "# Set x-axis tick locations and labels\n",
+    "tick_indices = []\n",
+    "tick_labels = []\n",
+    "for j, (start_date, end_date) in enumerate(seasons):\n",
+    "    season_length = len(pd.date_range(start_date, end_date))\n",
+    "    # Add ticks for the start date of each flu season\n",
+    "    tick_indices.append(current_index+15)\n",
+    "    tick_indices.append(current_index + season_length * 1/3)\n",
+    "    tick_indices.append(current_index + season_length * 2/3)\n",
+    "    tick_indices.append(current_index + season_length-36)\n",
+    "    # Append corresponding labels for each tick index\n",
+    "    tick_labels.extend([pd.date_range(start_date, end_date)[15].strftime('%Y-%m'), \n",
+    "                        pd.date_range(start_date, end_date)[int(season_length * 1/3)].strftime('%Y-%m'), \n",
+    "                        pd.date_range(start_date, end_date)[int(season_length * 2/3)].strftime('%Y-%m'),\n",
+    "                        pd.date_range(start_date, end_date)[int(season_length-36)].strftime('%Y-%m')])\n",
+    "    \n",
+    "    # Update current_index for the next season\n",
+    "    current_index += season_length + (50 if j < len(seasons) - 1 else 0)\n",
+    "\n",
     "ax.set_xticks(tick_indices)\n",
-    "ax.set_xticklabels(tick_dates, rotation=45, ha='right')\n",
+    "ax.set_xticklabels(tick_labels, rotation=45, ha='right')\n",
     "ax.set_xlabel('Date', fontsize=16, labelpad=10)\n",
     "ax.set_ylabel('ILI Rate', fontsize=16)\n",
     "ax.tick_params(axis='both', which='major', labelsize=14)\n",
@@ -319,18 +374,35 @@
     "\n",
     "    # Formatting for the last subplot\n",
     "    if i == len(prediction_tasks) - 1:\n",
+    "        # Reset current_index\n",
+    "        current_index = 0\n",
+    "        \n",
     "        # Set x-axis tick locations and labels\n",
-    "        tick_indices = np.linspace(0, current_index, 20, dtype=int)\n",
-    "        tick_dates = [plot_dates[np.abs(np.array(range(len(plot_dates))) - tick).argmin()].strftime('%Y-%m') for tick in tick_indices]\n",
+    "        tick_indices = []\n",
+    "        tick_labels = []\n",
+    "        for j, (start_date, end_date) in enumerate(seasons):\n",
+    "            season_length = len(pd.date_range(start_date, end_date))\n",
+    "            # Add ticks for the start date of each flu season\n",
+    "            tick_indices.append(current_index+15)\n",
+    "            tick_indices.append(current_index + season_length * 1/3)\n",
+    "            tick_indices.append(current_index + season_length * 2/3)\n",
+    "            tick_indices.append(current_index + season_length-36)\n",
+    "            # Append corresponding labels for each tick index\n",
+    "            tick_labels.extend([pd.date_range(start_date, end_date)[15].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 1/3)].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 2/3)].strftime('%Y-%m'),\n",
+    "                                pd.date_range(start_date, end_date)[int(season_length-36)].strftime('%Y-%m')])\n",
+    "            \n",
+    "            # Update current_index for the next season\n",
+    "            current_index += season_length + (50 if j < len(seasons) - 1 else 0)\n",
+    "\n",
     "        axs[i].set_xticks(tick_indices)\n",
-    "        axs[i].set_xticklabels(tick_dates, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
+    "        axs[i].set_xticklabels(tick_labels, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
     "        axs[i].set_xlabel('Date', fontsize=20, labelpad=20)  # Set common x-axis label with padding\n",
+    "        axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
     "\n",
-    "\n",
-    "    # axs[i].set_ylabel('ILI Rate')\n",
     "    axs[i].text(0.02, 0.95, f\"{forecasting_horizon} days ahead\", transform=axs[i].transAxes, fontsize=16, verticalalignment='top')\n",
-    "    axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
-    "\n",
+    "        \n",
     "    axs[i].spines['top'].set_visible(False)\n",
     "    axs[i].spines['right'].set_visible(False)\n",
     "    axs[i].spines['bottom'].set_linewidth(0.5)\n",
@@ -407,17 +479,35 @@
     "\n",
     "    # Formatting for the last subplot\n",
     "    if i == len(prediction_tasks) - 1:\n",
+    "        # Reset current_index\n",
+    "        current_index = 0\n",
+    "        \n",
     "        # Set x-axis tick locations and labels\n",
-    "        tick_indices = np.linspace(0, current_index, 20, dtype=int)\n",
-    "        tick_dates = [plot_dates[np.abs(np.array(range(len(plot_dates))) - tick).argmin()].strftime('%Y-%m') for tick in tick_indices]\n",
+    "        tick_indices = []\n",
+    "        tick_labels = []\n",
+    "        for j, (start_date, end_date) in enumerate(seasons):\n",
+    "            season_length = len(pd.date_range(start_date, end_date))\n",
+    "            # Add ticks for the start date of each flu season\n",
+    "            tick_indices.append(current_index+15)\n",
+    "            tick_indices.append(current_index + season_length * 1/3)\n",
+    "            tick_indices.append(current_index + season_length * 2/3)\n",
+    "            tick_indices.append(current_index + season_length-36)\n",
+    "            # Append corresponding labels for each tick index\n",
+    "            tick_labels.extend([pd.date_range(start_date, end_date)[15].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 1/3)].strftime('%Y-%m'), \n",
+    "                                pd.date_range(start_date, end_date)[int(season_length * 2/3)].strftime('%Y-%m'),\n",
+    "                                pd.date_range(start_date, end_date)[int(season_length-36)].strftime('%Y-%m')])\n",
+    "                                \n",
+    "            # Update current_index for the next season\n",
+    "            current_index += season_length + (50 if j < len(seasons) - 1 else 0)\n",
+    "\n",
     "        axs[i].set_xticks(tick_indices)\n",
-    "        axs[i].set_xticklabels(tick_dates, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
+    "        axs[i].set_xticklabels(tick_labels, rotation=45, ha='right')  # Rotate labels by 45 degrees\n",
     "        axs[i].set_xlabel('Date', fontsize=20, labelpad=20)  # Set common x-axis label with padding\n",
+    "        axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
     "\n",
-    "    # axs[i].set_ylabel('ILI Rate')\n",
     "    axs[i].text(0.02, 0.95, f\"{forecasting_horizon} days ahead\", transform=axs[i].transAxes, fontsize=16, verticalalignment='top')\n",
-    "    axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
-    "\n",
+    "        \n",
     "    axs[i].spines['top'].set_visible(False)\n",
     "    axs[i].spines['right'].set_visible(False)\n",
     "    axs[i].spines['bottom'].set_linewidth(0.5)\n",
@@ -485,9 +575,6 @@
     "print(mape_values)\n",
     "print(pearson_values)\n",
     "\n",
-    "# Assuming the rest of your setup code remains the same\n",
-    "\n",
-    "# Data setup\n",
     "metrics_dict = {'MAE': mae_values, 'MAPE': mape_values, 'r': pearson_values}\n",
     "\n",
     "positions = np.arange(len(forecasting_horizons))\n",
